# fontconfig

./: .gitlab-ci.yml  Makefile.am  configure.ac  fontconfig.pc.in  git.mk  meson.build  meson_options.txt
.gitlab-ci/: config.yml
conf.d/: 30-core-fonts-for the-web-families.conf  30-core-fonts-for the-web-substitutes.conf  30-metric-aliases.conf  45-latin.conf  60-latin.conf  65-nonlatin.conf  meson.build
doc/: Makefile.am  confdir.xml.in  edit-xml.py  extract-man-list.py  fcconfig.fncs  fcfontset.fncs  fclangset.fncs  fontconfig-devel.sgml  fontconfig-devel.xml  fontconfig-user.sgml  fontconfig-user.xml  func.xml  meson.build  version.xml.in
fc-cache/: Makefile.am  fc-cache.sgml  fc-cache.xml
fc-cat/: Makefile.am  fc-cat.sgml  fc-cat.xml
fc-conflist/: Makefile.am  fc-conflist.sgml  fc-conflist.xml
fc-list/: Makefile.am  fc-list.sgml  fc-list.xml
fc-match/: Makefile.am  fc-match.sgml  fc-match.xml
fc-pattern/: Makefile.am  fc-pattern.sgml  fc-pattern.xml
fc-query/: Makefile.am  fc-query.sgml  fc-query.xml
fc-scan/: Makefile.am  fc-scan.sgml  fc-scan.xml
fc-validate/: Makefile.am  fc-validate.sgml  fc-validate.xml
fontconfig/: fontconfig.h
src/: Makefile.am  cutout.py  fccache.c  fccfg.c  fccompat.c  fcdefault.c  fcfreetype.c  fcinit.c  fcint.h  fclang.c  fclist.c  fcmatch.c  fcmatcher.c  fcmatcher.h  fcmd5.h  fcmutex.c  fcmutex.h  fcobjs.h  fcpat.c  meson.build
test/: meson.build  test-conf.c
